Исправлены замечания по итогу второго ревью

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </article>
     </section>
 
-    <section class="cover page__cover page__relative-block">
+    <section class="cover page__cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
         <h2 class="cover__title">До Байкала &laquo;на&nbsp;собаках&raquo;</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе и&nbsp;iframes — путешествие
